# pusht-finetune

./: .gitignore  README.md  evaluate_checkpoints.py  main.py  pyproject.toml  setup_third_party.sh
checkpoints/act_pusht/logs/: events.out.tfevents.1778500672.LAPTOP-FFS6GANH.37327.0
training/: training_act.py  training_diffusion.py  training_pi.py  training_pi0.py
usefuls/: inspect_diffusion.py  run_inference.py  run_inference_diffusion.py  visualize_dataset_metadata.py
wandb/: latest-run
wandb/run-20260511_080456-bu49pizq/: run-bu49pizq.wandb
wandb/run-20260511_080456-bu49pizq/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
