[project]
name = "pusht-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.3.0",
    "imageio>=2.37.3",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "wandb>=0.26.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
