[project]
name = "pusht-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.3.0",
    "imageio>=2.37.3",
    "lerobot[training,viz,smolvla,diffusion,pusht,pi]",
    "moviepy>=2.2.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchcodec==0.4",
    "wandb>=0.24.0,<0.25.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"

[tool.uv.sources]
lerobot = { path = "third_party/lerobot", editable = true }
